Bug 155032 - Memory leak of 18 bytes from 1 block allocated in nsSOCKSSocketInfo::GetProxyHost r=smeredith, sr=alecf, a=roc+moz